fixed #55: Moved MultidimData MRML nodes into MRML subdirectory

--- a/src/SequenceBrowser/Logic/CMakeLists.txt
+++ b/src/SequenceBrowser/Logic/CMakeLists.txt
@@ -10,13 +10,10 @@ set(${KIT}_INCLUDE_DIRECTORIES
 set(${KIT}_SRCS
   vtkSlicer${MODULE_NAME}Logic.cxx
   vtkSlicer${MODULE_NAME}Logic.h
-  vtkMRML${MODULE_NAME}Node.cxx
-  vtkMRML${MODULE_NAME}Node.h
   )
 
 set(${KIT}_TARGET_LIBRARIES
-  ${ITK_LIBRARIES}
-  vtkSlicerSequencesModuleLogic
+  vtkSlicer${MODULE_NAME}ModuleMRML
   )
 
 #-----------------------------------------------------------------------------
