--- a/SequenceRegistration/CMakeLists.txt
+++ b/SequenceRegistration/CMakeLists.txt
@@ -1,3 +1,7 @@
+project(Sequences)
+find_package(Slicer REQUIRED)
+include(${Slicer_USE_FILE})
+
 #-----------------------------------------------------------------------------
 set(MODULE_NAME SequenceRegistration)
 
